# PIAIC_Applied_GenAI_Batch62

./: .gitignore  README.md
01_ai_agents_first/02_openrouter/: OpenRouter_AI_Agents_SDK.ipynb
Quarter_01/: Pakistan.html  index.html  test_file.ipynb
Quarter_01/_assignments/: _assignment1.py
Quarter_01/_assignments/_01/: _assignment1.py
Quarter_01/_assignments/_03/: assignment.py  readme.md
Quarter_01/_assignments/_04/: simple_calculator.py
Quarter_01/_assignments/_05/: list_assignment.ipynb  list_methods.docx  ~$st_methods.docx
Quarter_01/_assignments/_07/: README.md  assignment.py
Quarter_01/_assignments/_08/: calculator.py
Quarter_01/_online_sessions/markdown/: emphasis.md  headings.md  list.md
Quarter_01/_practice/: lists.ipynb  test_file.ipynb
Quarter_01/_projects/: simple_calculator.py
Quarter_01/_projects/simpe_calculator/: simple_calculator.py
Quarter_01/_projects/simple_calculator/: simple_calculator.py
Quarter_01/_python/Chapter_2/: variables.ipynb
Quarter_01/onsite_class/: 15-Sep.ipynb
Quarter_02/Online_Sessions/: hello_agent.ipynb
Quarter_02/Online_Sessions/_python/: dataclass.ipynb
Quarter_02/Onsite_Sessions/_crewai/test_crew/: .gitignore  README.md  poem.txt  pyproject.toml
Quarter_02/Onsite_Sessions/_crewai/test_crew/src/test_crew/: main.py  test_crew.py
Quarter_02/Onsite_Sessions/_crewai/test_crew/src/test_crew/crews/poem_crew/config/: agents.yaml  tasks.yaml
Quarter_02/Onsite_Sessions/crew_1/: .gitignore  README.md  pyproject.toml
Quarter_02/Onsite_Sessions/crew_1/src/crew_1/: main.py  main_1.py
Quarter_02/Onsite_Sessions/crewai_1/: pyproject.toml
Quarter_02/Onsite_Sessions/weekely_assignments/: 01.md  02.md  03.ipynb  03_assignment.ipynb  04_aisuite_assignment.ipynb  05_Gemini_2.0.ipynb  06.ipynb
Quarter_02/_Projects/: project_01.ipynb  project_02.ipynb  project_03.ipynb
Quarter_02/_Projects/chainlit/: app.py  requirememnts.txt  requirements.txt
Quarter_02/_crewai/test_1/: crewai_flow.html  pyproject.toml
Quarter_02/_crewai/test_1/src/test_1/: main.py  main_1.py  route.py
Quarter_02/_crewai/test_2/: pyproject.toml
Quarter_02/_crewai/test_2/src/test_2/: main.py
Quarter_02/_crewai/test_2/src/test_2/crews/config/: agents.yaml  task.yaml
Quarter_02/_crewai/test_2/src/test_2/crews/teaching_crew/: teaching_crew.py
Quarter_03/Class_Challanges/27-Apr-2025/02/: pyproject.toml
Quarter_03/Class_Challanges/27-Apr-2025/_01/: gemini_agent.py  main.py  pyproject.toml
Quarter_03/Class_Challanges/27-Apr-2025/chainlit_UI/: main.py  pyproject.toml
